# gen_redox_lib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: handle_updates.yml
gen_redox_lib/: generate.py  pull_request.py
gen_redox_lib/gen_helpers/: common_klasses.py  get_spec.py  parse_spec.py  sub_types.py  utils.py  write_lib_files.py
gen_redox_lib/templates/: generics.jinja2  template-resource.jinja2
redox_lib_gen/: generate.py  pull_request.py
redox_lib_gen/gen_helpers/: __init__.py  common_klasses.py  types.py  utils.py  write_lib_files.py
redox_lib_gen/templates/: generics.jinja2  template-resource.jinja2
tests/: test_redox_lib_gen.py  test_redox_types.py
tests/snapshots/generic/: Claim.py  ClinicalDecisions.py  ClinicalSummary.py  Device.py  Enrichment.py  Financial.py  Flowsheet.py  Inventory.py  Media.py  Medications.py  Notes.py  Order.py  Organization.py  PatientAdmin.py  PatientEducation.py  PatientSearch.py  Provider.py  Referral.py  Research.py  Results.py  SSO.py  Scheduling.py  SurgicalScheduling.py  Vaccination.py
