[tool.poetry]
name = "gen_redox_lib"
version = "1.1.0"
description = ""
authors = ["Mike Mabey <pypi@mikemabey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
requests = "^2.31"
retry2 = "^0.9.3"
inflection = "^0.5.1"
Jinja2 = "^3"
ufmt = "^2"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-snapshot = "^0.9.0"
pre-commit = "^3.1"
tox = "^4.4"
coveralls = "^3.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore tests/snapshots/"

[tool.usort]
excludes = ["tests/snapshots/"]

[tool.usort.known]
first_party = ["gen_redox_lib"]

[tool.ruff]
extend-exclude = ["tests/snapshots"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    envlist = py310

    [tox:.package]
    basepython = python3

    [testenv]
    passenv = GITHUB_*
    deps =
        pytest
        pytest-snapshot
        ufmt>=2.0
    allowlist_externals = coverage
    commands =
        coverage run --source gen_redox_lib -m pytest -vv
"""
